--- a/src/main/resources/templates/fragments/mobileMenu.html
+++ b/src/main/resources/templates/fragments/mobileMenu.html
@@ -12,7 +12,10 @@
             </div>
         </div>
         <div class="menu-content">
-            <div class="menu-categoryBox">
+            <a th:if="${loginUser != null}" href="/moim/create" target="_self" class="menu-contentBox">
+                <button type="button" class="menu-button">모임 생성하기</button>
+            </a>
+            <div class="menu-contentBox">
                 <div class="menu-title subTitle">
                     카테고리
                 </div>
@@ -25,7 +28,7 @@
                     </a>
                 </div>
             </div>
-            <div class="menu-categoryBox">
+            <div class="menu-contentBox">
                 <div class="menu-title subTitle">
                     마이페이지
                 </div>
@@ -54,7 +57,7 @@
                     </a>
                 </div>
             </div>
-            <div class="menu-categoryBox" th:if="${loginUser != null && loginUser.isAdmin == 'Y'}">
+            <div class="menu-contentBox" th:if="${loginUser != null && loginUser.isAdmin == 'Y'}">
                 <div class="menu-title subTitle">
                     관리자전용
                 </div>
