--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -4,10 +4,10 @@
       layout:decorate="~{layouts/base}"
       lang="ko">
 <body>
-
-<div class="main-wrapper" layout:fragment="content">
+<main class="main-wrapper" layout:fragment="content">
     <div class="main-container"> <!--모임메인사진-->
-        <img src="moim_main_pic1.JPG" alt="모임메인사진" class="moim-main-image">
+        <img th:src="@{https://kr.object.iwinv.kr/moida/{path}(path=${moim.fileConvert})}" alt="모임메인사진"
+             class="moim-main-image">
         <!--모바일 버전 모임 제목, 설명, 신청버튼-->
         <div class="moim-title-mobile">[[${moimTitle}]]</div>
         <div class="moim-description-mobile">
@@ -17,7 +17,7 @@
             <div class="moim-fee-2-mobile">[[${moimMoney}]] 원</div>
         </div>
         <hr class="moim-enroll-divider-mobile"/>
-        <div class="main-enroll-mobile"> 
+        <div class="main-enroll-mobile">
             <button onclick="location.href='pages/moim/JoinMoim'">신청하기</button>
         </div>
 
@@ -25,8 +25,9 @@
             <div class="review-title">참여자 후기</div>
         </div>
         <div class="reviews-container"> <!--모임 후기 섹션 : 클릭 시 모달창으로 후기상세내용 보이기-->
-            <div class="review-item" th:each="r : ${reviewList}">    
-                <img src="https://media.bunjang.co.kr/product/283006372_1_1722771500_w360.jpg" alt="후기1" class="profile-img">
+            <div class="review-item" th:each="r : ${reviewList}">
+                <img src="https://media.bunjang.co.kr/product/283006372_1_1722771500_w360.jpg" alt="후기1"
+                     class="profile-img">
                 <div class="review-text">
                     <div class="review-writer">[[${r.reviewId}]]</div>
                     <div class="user-star">
@@ -45,30 +46,30 @@
                         </p>
                     </div>
                 </div>
-            </div>  
+            </div>
         </div> <!--review container-->
-        
+
         <div class="moim-detail-title">상세정보
             <hr class="moimInfo-divider">
         </div>
-        <div class="main-moimInfo"> 
-            <div class="moimInfo-container" >
+        <div class="main-moimInfo">
+            <div class="moimInfo-container">
                 <div class="moimInfo-title">
                     <div class="moimInfo">
                         <p id="content">
-                           [[${moimContent}]]
+                            [[${moimContent}]]
                         </p>
                     </div>
-                 </div>
+                </div>
                 <button class="moreInfo" id="moreInfo">더보기</button>
             </div>
-         </div> <!--moimInfo-->
-         <div class="host-intro">호스트 소개</div>
+        </div> <!--moimInfo-->
+        <div class="host-intro">호스트 소개</div>
         <div class="host-intro-2">앞으로 함께할 호스트에요</div>
-         <div class="host-container">  
+        <div class="host-container">
             <div class="host-profile-img">
-                    <img src="./hostPrifile01.jpg" alt="호스트 프로필 사진">
-                </div>
+                <img src="./hostPrifile01.jpg" alt="호스트 프로필 사진">
+            </div>
             <div class="host-info-container">
                 <div class="host-name">[[${name}]]</div>
                 <div class="host-introduction">[[${hostIntro}]]</div>
@@ -78,13 +79,12 @@
                 <img src="./host-moimImg2.JPG" alt="모임이미지2">
                 <img src="./host-moimImg3.JPG" alt="모임이미지3">
             </div>
-         </div>
-
+        </div>
 
 
     </div>
     <div class="main-container2"> <!--모임 신청칸 pc-->
-        <div class="main-enroll-pc"> 
+        <div class="main-enroll-pc">
             <button class="moim-category" type="button">[[${moimType}]]</button> <!--카테고리-->
             <div class="moim-title">[[${moimTitle}]]</div>
             <div class="moim-description">
@@ -107,9 +107,9 @@
             <p id="reviewText"></p>
         </div>
     </div>
-    
 
-</div>
+
+</main>
 
 
 <div class="backdrop" onclick="hideBackdrop()"></div>
