--- a/src/main/resources/templates/pages/moim/create.html
+++ b/src/main/resources/templates/pages/moim/create.html
@@ -24,8 +24,8 @@
         </div>
 
         <div class="moim-create-row">
-            <label for="moimName">모임제목</label>
-            <input type="text" id="moimName" name="moimName" placeholder="모임 제목을 입력하세요"/>
+            <label for="moimTitle">모임제목</label>
+            <input type="text" id="moimTitle" name="moimTitle" placeholder="모임 제목을 입력하세요"/>
         </div>
 
         <div class="moim-create-row">
