--- a/src/main/resources/templates/fragments/mobileMenu.html
+++ b/src/main/resources/templates/fragments/mobileMenu.html
@@ -65,7 +65,7 @@
                     <a href="/admin/category/list" class="menu-item">
                         카테고리 관리
                     </a>
-                    <a href="/admin/member/list" class="menu-item">
+                    <a href="/admin/user/list" class="menu-item">
                         회원 관리
                     </a>
                     <a href="/admin/moim/list" class="menu-item">
