--- a/src/main/resources/templates/pages/category/list.html
+++ b/src/main/resources/templates/pages/category/list.html
@@ -31,7 +31,7 @@
                 <div class="moim-categoryText">
 
                 </div>
-                <div class="moim-titleText" th:text="${m.moimName}">
+                <div class="moim-titleText" th:text="${m.moimTitle}">
                 </div>
                 <div class="moim-dateText">
                     <i class="ti ti-calendar-week"></i>
