--- a/src/main/resources/static/css/moim_detail.css
+++ b/src/main/resources/static/css/moim_detail.css
@@ -21,14 +21,14 @@
     background-color: white;
 }
 
-.moim-main-image{
+.moim-main-image{ /*뷰 이미지 출력 크기조절학*/
     width: 100%;
     max-width:800px;
-    height: auto;
+    height: 400px;
     position: left;
     margin: 20px 0 0 0;
     object-fit: cover;
-    border-radius: 20px;
+    border-radius: 16px;
     box-sizing: border-box;
 
 }
