--- a/src/main/resources/static/css/review_read.css
+++ b/src/main/resources/static/css/review_read.css
@@ -7,7 +7,7 @@
     align-items: flex-start;
     flex-direction: column;
     max-width: 1200px;      
-    margin: 50px auto; 
+    margin: 0 auto; 
     font-family: 'Helvetica Neue', sans-serif;
 }
 /* 리뷰상단 */
@@ -52,8 +52,12 @@
     border-radius: 20px;
     margin-left: 10px;
     margin-top: 30px;
-    width: 1200px;    
-    max-width: 1200px;    
+    max-width: 1200px;   
+    width: 100%;   
+}
+
+.review-photo-button{
+   display: none;
 }
 .review-photo{
     display: flex;
@@ -115,7 +119,7 @@
 }
 .review-rate-box{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding: 5px;
     margin-left: 10px;
     width: 100%;
@@ -126,28 +130,34 @@
     flex-direction: row;
     font-size: 15px;
 }
-.review-rate, .review-date, .review-edit{
+.rate-date-box{
     display: flex;
-    font-size: 15px;
+    flex-direction: row;
+    width: 100%;
+    max-width: 1000px;
+    font-size: 18px;
     color: rgba(207, 203, 203, 0.947);
-    margin-left: 5px;
 }
+
  .review-edit{
   display: flex;
-  gap: 10px; 
+  flex-direction: row;
+  gap: 5px; 
   margin-left: auto;
-  margin-right: 10px;
+  margin-right: 15px;
  }
-.review-edit:hover{
-	cursor:pointer;
-}
+ .review-edit span:hover{
+    cursor:pointer;
+ }
 .review-content-title{
     display: flex;
     font-size: 20px;
     color:black;
     margin-top: 25px;
     width: 100%;
-    max-width: 1000px;
+    max-width: 1200px;
+    align-items: flex-start;
+    justify-content: left;
     overflow: visible;
     white-space: pre-wrap;   
     overflow-wrap: break-word;
@@ -158,7 +168,7 @@
      white-space: pre-wrap;   
      overflow-wrap: break-word;
      width: 100%;
-     max-width: 1000px;
+     max-width: 1200px;
      line-height: 1.6;
      
 }
@@ -167,4 +177,119 @@
     max-width: 400px;
     height:auto;
     margin-top: 30px;
+}
+
+@media screen and (max-width: 768px) {
+
+.review-wrapper{
+  width:100%;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  justify-content: center;
+  font-family: 'Helvetica Neue', sans-serif;
+  
+ }
+  .review-banner,
+  .review-title,
+  .moim-title {
+    font-size: 120%;
+  }
+  
+.review-photo-container{
+  width:100%;
+  max-width: 768px;
+  margin-top: 30px;
+  margin-left:auto;
+  margin-right:auto;
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  white-space: nowrap;
+  justify-content: flex-start;
+
+}
+.review-photo-button{
+   display: show;
+}
+.review-photo{
+    display: flex;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    padding-right: 40px;
+    gap:6px;
+  }
+  .review-photo img {
+    width: 100px;
+    height: 100px;
+    margin-right: 10px;
+    display: inline-block;
+    object-fit: cover;
+    flex-shrink: 0;
+  }
+  .review-photo-button span{
+    cursor: pointer;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    background-color: rgba(191, 190, 190, 0.839);
+    border: none;
+    padding: 10px;
+    z-index: 10;
+  }
+.review-content-container{
+  width: 100%;
+  max-width: 100%;
+  margin-top: 30px;
+  margin-left:auto;
+  margin-right:auto;
+  box-sizing: border-box; 
+  
+}
+
+.review-form{
+    width: 100%;
+    max-width: 100%;
+    overflow: visible;
+    flex-direction: column;        
+    box-sizing: border-box;
+    display: flex;
+}
+ .review-edit{
+  display: flex;
+  margin-left: auto;
+  margin-right: 10px;
+  flex-direction: row;
+ }
+ .review-rate-box{
+    display: flex;
+    flex-direction: column;
+}
+/*평점이랑 날짜 - 가로정렬*/
+.rate-date-box{
+    display: flex;
+    flex-direction: row;
+}
+  .writer-profile img {
+    width: 80px;
+    height: 80px;
+}
+/* 리뷰사진모음상단 */
+  .review-photo img {
+    display: block;
+    width: 100%;
+    max-width: 100px;
+    height: 100px;
+     margin-left: auto;
+  margin-right: auto;
+    
+  }
+/* 리뷰내용사진 */
+ .review-img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
 }
