--- a/src/main/resources/templates/pages/my/review/review_read.html
+++ b/src/main/resources/templates/pages/my/review/review_read.html
@@ -6,6 +6,9 @@
 <head>
       <script src="./review_read.js"></script>
       <link href="./review_read.css" rel="stylesheet"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
+
 <meta charset="UTF-8">
 <title>리뷰 상세페이지</title>
 </head>
@@ -20,14 +23,15 @@
             </div>
       </div>
       <div class="review-photo-container">
-            <div class="review-photo" th:each="r : ${reviewImgList}">
-                  <img src="#"/>
+            <div class="review-photo" id="review-photo"th:each="r : ${reviewImgList}">
+                  <img src="./review03.webp"/>
             </div>
+            <button class="review-photo-button" id="review-photo-btn"><i class="ti ti-caret-right"></i></button>
       </div>
       <div class="review-content-container" th:each="r : ${reviewList}"> <!--날짜내림차순으로 쿼리 뽑기 -->
             <div class="review-writer">
                   <div class="writer-profile">
-                        <img src="#"/>
+                        <img src="./review_read_profileImg.jpg"/>
                         <div class="writer-name">[[${loginUser.name}]]</div>
                   </div>
             </div>
@@ -36,24 +40,31 @@
                         <div class="review-star">
                               <span th:each = "i : ${#numbers.sequence(1, r.reviewRate)}"class="star" data-value="1">
                                     <i class="ti ti-carambola"></i>
+                                    <i class="ti ti-carambola"></i>
+                                    <i class="ti ti-carambola"></i>
+                                    <i class="ti ti-carambola"></i>
+                                    <i class="ti ti-carambola"></i>
                               </span>
                         </div>
-                        <div class="review-rate">([[${r.reviewRate}]])</div>
-                        <div class="review-date">[[${r.reviewDate}]]</div>
-                        <div class="review-edit" th:if="${loginUser.userId == r.userId}" ><!--확인할 것-->
+                        <div class="rate-date-box">
+                              <div class="review-rate">([[${r.reviewRate}]])</div>
+                              <div class="review-date">[[${r.reviewDate}]]</div>
+                              <div class="review-edit" th:if="${loginUser.userId == r.userId}" ><!--확인할 것-->
                         	<a th:href="@{/review/edit(no=${r.reviewId})}">
-				   				<span><i class="ti ti-pencil"></i></span>
-				  			</a>&nbsp;&nbsp;
-				         	<a th:href="@{/review/delete(no=${r.reviewId})}">
-								 <span><i class="ti ti-trash"></i></span>
-						 	</a>
-                  		</div>
+				   	      <span><i class="ti ti-pencil"></i></span>
+				  	</a>&nbsp;
+				      <a th:href="@{/review/delete(no=${r.reviewId})}">
+						<span><i class="ti ti-trash"></i></span>
+					</a>
+                  	</div>
+                        </div>
+                        
 
                   <div class="review-content-title">[[${r.reviewTitle}]]</div>
                   <div class="review-content"> <!--리뷰 txt + img-->
                         <div class="review-txt">[[${r.reviewContent}]]</div>
                         <div class="review-img">
-                              <img src="#"/>
+                              <img src="./review02.webp"/>
                         </div>
                   </div>
 
