BACK : moimException폴더생성, sendRedirect폴더 생성

--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -24,7 +24,7 @@
         <div class="review-content">
             <div class="reviewTitle">참여자 후기</div>
         </div>
-        <div class="reviews-container"> <!--모임 후기 섹션 : 클릭 시 모달창으로 후기상세내용 보이기-->
+        <div class="review-container"> <!--모임 후기 섹션 : 클릭 시 모달창으로 후기상세내용 보이기-->
             <div class="review-item" th:each="r : ${reviewList}">
                 <img src="https://media.bunjang.co.kr/product/283006372_1_1722771500_w360.jpg" alt="후기1"
                      class="profile-img">
