--- a/src/main/resources/static/css/moim_detail.css
+++ b/src/main/resources/static/css/moim_detail.css
@@ -15,7 +15,7 @@
     justify-content: flex-start;
     align-self: flex-start;
     width: 100%;
-    max-width: 600px;
+    max-width: 500px;
     min-height: 300px;
     min-width: 300px;
     background-color: white;
@@ -23,7 +23,7 @@
 
 .moim-main-image{ /*뷰 이미지 출력 크기조절학*/
     width: 100%;
-    max-width:800px;
+    max-width:700px;
     height: 400px;
     position: left;
     margin: 20px 0 0 0;
@@ -169,7 +169,7 @@
 }
 
 /* 리뷰 아이템이 들어있는 구역 */
-.reviews-container{
+.review-container{
     display: flex;
     justify-content: center;
     align-items: center;
