--- a/src/main/resources/templates/pages/admin/moimList/moimList.html
+++ b/src/main/resources/templates/pages/admin/moimList/moimList.html
@@ -44,10 +44,13 @@
     <div id="moimDeleteModal" class="modal" style="display:none;">
         <div class="modal-content">
 	        <p>삭제되었습니다.</p>
-	        <button id="deleteConfirm" onclick="location.href='/pages/admin/moimList/moimList'">확인</button>
+	        <button id="deleteConfirm">확인</button>
     	</div>
     </div>
-    
+    <form id="deleteForm" th:action="@{/moimList/delete}" method="post" style="display:none;">
+    	<input type="hidden" name="moimId" th:value="${moimId}" />
+    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+	</form>
 
     <br>
 
