--- a/src/main/resources/templates/pages/my/review/review_read.html
+++ b/src/main/resources/templates/pages/my/review/review_read.html
@@ -36,27 +36,31 @@
                   </div>
             </div>
             <div class="review-form"> 
-                  <div class="review-rate-box"> <!--별 박스-->
-                        <div class="review-star">
-                              <span th:each = "i : ${#numbers.sequence(1, r.reviewRate)}"class="star" data-value="1">
-                                    <i class="ti ti-carambola"></i>
-                                    <i class="ti ti-carambola"></i>
-                                    <i class="ti ti-carambola"></i>
-                                    <i class="ti ti-carambola"></i>
-                                    <i class="ti ti-carambola"></i>
-                              </span>
-                        </div>
-                        <div class="rate-date-box">
-                              <div class="review-rate">([[${r.reviewRate}]])</div>
-                              <div class="review-date">[[${r.reviewDate}]]</div>
-                              <div class="review-edit" th:if="${loginUser.userId == r.userId}" ><!--확인할 것-->
-                        	<a th:href="@{/review/edit(no=${r.reviewId})}">
-				   	      <span><i class="ti ti-pencil"></i></span>
-				  	</a>&nbsp;
-				      <a th:href="@{/review/delete(no=${r.reviewId})}">
-						<span><i class="ti ti-trash"></i></span>
-					</a>
-                  	</div>
+            	<div class="review-rate-box"> <!--별 박스-->
+                	<div class="review-star">
+                    	<span th:each = "i : ${#numbers.sequence(1, r.reviewRate)}"class="star" data-value="1">
+	                        <i class="ti ti-carambola"></i>
+	                        <i class="ti ti-carambola"></i>
+	                        <i class="ti ti-carambola"></i>
+	                        <i class="ti ti-carambola"></i>
+	                        <i class="ti ti-carambola"></i>
+                        </span>
+                    </div>
+                    	<div class="rate-date-box">
+	                        <div class="review-rate">([[${r.reviewRate}]])</div>
+	                        <div class="review-date">[[${r.reviewDate}]]</div>
+	                        <div class="review-edit" th:if="${loginUser.userId == r.userId}" ><!--확인할 것-->
+                  				<a th:href="@{/review/edit(no=${r.reviewId})}">
+ 	     							<span onclick="location.href='/review/edit'">
+ 	     								<i class="ti ti-pencil"></i>
+ 	     							</span>
+								</a>&nbsp;
+				     	 		<a th:href="@{/review/delete(no=${r.reviewId})}">
+									<span onclick="deleteReviewModal()">
+										<i class="ti ti-trash"></i>
+									</span>
+								</a>
+                  			</div>
                         </div>
                         
 
@@ -69,15 +73,11 @@
                   </div>
 
 
-            </div>
-
-                  
-            
-
-      </div>
+            	</div>
+      		</div>
 
 
-   </div>
+   	</div>
 </main>
 </body>
 </html>
