--- a/src/main/resources/templates/pages/notice/write.html
+++ b/src/main/resources/templates/pages/notice/write.html
@@ -18,6 +18,8 @@
         <label class="notice-form-label" for="content">내용</label>
         <textarea class="notice-form-textarea" id="content" name="noticeContent" required></textarea>
 
+        <input type="file" id="moimImage" name="moimImage" style="display:block; width:300px; height:auto;" />
+
         <div class="notice-form-button-wrapper">
             <button type="submit" class="notice-form-submit-button">등록하기</button>
         </div>
