--- a/src/main/resources/templates/pages/notice/edit.html
+++ b/src/main/resources/templates/pages/notice/edit.html
@@ -11,7 +11,7 @@
 
     <h2 class="notice-form-title">공지사항 수정</h2>
 
-    <form class="notice-form" action="/notice/update" method="POST">
+    <form class="notice-form" action="/notice/update" method="POST" enctype="multipart/form-data">
         <input type="hidden" name="noticeId" th:value="${n.noticeId}" />
         <input type="hidden" name="page" th:value="${page}" />
 
@@ -21,10 +21,13 @@
         <label class="notice-form-label" for="content">내용</label>
         <textarea class="notice-form-textarea" id="content" name="noticeContent" required>[[${n.noticeContent}]]</textarea>
 
+        <input type="file" id="moimImage" name="moimImage" style="display:block; width:300px; height:auto;" />
+
         <div class="notice-form-button-wrapper">
             <button type="submit" class="notice-form-submit-button">수정하기</button>
         </div>
     </form>
+
 
 </main>
 
