--- a/src/main/resources/templates/pages/notice/edit.html
+++ b/src/main/resources/templates/pages/notice/edit.html
@@ -14,14 +14,14 @@
     <form class="notice-form" action="/notice/update" method="POST" enctype="multipart/form-data">
         <input type="hidden" name="noticeId" th:value="${n.noticeId}" />
         <input type="hidden" name="page" th:value="${page}" />
-
+        <input type="hidden" name="fileId" th:value="${n.fileId}" />
         <label class="notice-form-label" for="title">제목</label>
         <input class="notice-form-input" type="text" id="title" name="noticeTitle" required th:value="${n.noticeTitle}">
 
         <label class="notice-form-label" for="content">내용</label>
         <textarea class="notice-form-textarea" id="content" name="noticeContent" required>[[${n.noticeContent}]]</textarea>
 
-        <input type="file" id="moimImage" name="moimImage" style="display:block; width:300px; height:auto;" />
+        <input type="file" id="moimImage" name="moimImage" style="display:block; width:300px; height:auto;"  th:value="${n.fileConvert}" />
 
         <div class="notice-form-button-wrapper">
             <button type="submit" class="notice-form-submit-button">수정하기</button>
